# agentscope-java

./: .gitignore  .licenserc.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  SKILL.md  codecov.yml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/instructions/: code-review.instructions.md
.github/scripts/: check-shade-and-bom-sync.sh
.github/workflows/: maven-ci.yml  website.yml
agentscope-core/: pom.xml
agentscope-dependencies-bom/: pom.xml
agentscope-distribution/: pom.xml
agentscope-distribution/agentscope-all/: pom.xml
agentscope-distribution/agentscope-bom/: pom.xml
agentscope-examples/: pom.xml
agentscope-examples/a2a/: pom.xml
agentscope-examples/advanced/: pom.xml
agentscope-examples/agui/: pom.xml
agentscope-examples/boba-tea-shop/: HIMARKET_DEPLOYMENT.md  HIMARKET_DEPLOYMENT_zh.md  IMAGE_BUILD_GUIDE.md  IMAGE_BUILD_GUIDE_zh.md  README.md  README_zh.md  build.sh  docker-compose.yml  docker-env.example  local-deploy.sh  local-env.example  pom.xml
agentscope-extensions/: pom.xml
docs/: _config.yml  _toc.yml  pyproject.toml  setup.py
docs/_templates/: language-switch.html
docs/en/: intro.md
docs/en/quickstart/: installation.md  key-concepts.md
docs/en/task/: a2a.md  agent-config.md  mcp.md  memory.md  session.md  state.md  tool.md  tts.md
docs/llm/: README.md  agentscope-llm-guide.md
docs/zh/: intro.md
docs/zh/quickstart/: installation.md  key-concepts.md
docs/zh/task/: a2a.md  agent-config.md  mcp.md  memory.md  session.md  state.md  tool.md  tts.md
(+1495 files in other folders)
